--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@redux-saga/core": "^1.1.3",
+    "@redux-saga/types": "^1.1.0",
     "@types/react-redux": "^7.1.16",
     "immer": "^9.0.1",
     "redux": "^4.0.5",
